@@ -21,6 +21,7 @@ This project receives help from these awesome contributors:
 - laixintao
 - Georgy Frolov
 - Michał Górny
+- Waldir Pimenta
 
 Thanks
 ------
